Added lake, management unit and grid5 detail pages
this commit adds views, urls, and templates to present available
information on each entity, including any geometry and associations to
other common elements.  The grid detail page lists the management
units that it is part of.  All previously passing tests continue to pass.

--- a/common/templates/common/grid5_list.html
+++ b/common/templates/common/grid5_list.html
@@ -47,7 +47,7 @@
                 <tbody>
                     {% for object in object_list %}
                         <tr>
-                            <td><a href="#">{{ object.slug }}</a></td>
+                            <td><a href="{% url 'common:grid5_detail' slug=object.slug %}">{{ object.slug }}</a></td>
                             <td>{{ object.lake.lake_name|default:"---"  }}</td>                                                     
                             <td>{{ object.grid0|default:"---"  }}</td>                         
                            
