--- a/common/templates/common/management_unit_list.html
+++ b/common/templates/common/management_unit_list.html
@@ -8,7 +8,6 @@
 {% block content  %}
 
     <div class="container">
-
         <div class="row justify-content-between mt-3">
             <div class="col-8">
                 <h3>Management Unit List:</h3>                
@@ -20,22 +19,19 @@
                 </div>
             </div>
         </div>
-
         {% if search %}
             <div class="row justify-content-between mt-3">
                 <div class="col-8">
-                    <p>{{object_list.count}} management_unit found below node {{search}} "<em>{{management_unit.management_unit_label}}</em>".</p>     
+                    <p>{{object_list.count}} management_unit found like {{search}} "<em>{{management_unit.management_unit_label}}</em>".</p>     
                 </div>                            
                 <div class="col-2">
                     <a href="{% url 'common:management_unit_list'  %}">Reset</a>                                
                 </div>
             </div>
-
         {% endif %}
         
         {% if object_list %}
-            <table id="management_unit-table" class="table tablesorter">
-                
+            <table id="management_unit-table" class="table tablesorter">                
                 <thead>
                     <tr>
                         <th>Slug</th>
@@ -48,17 +44,16 @@
                 <tbody>
                     {% for object in object_list %}
                         <tr>
-                            <td><a href="#">{{ object.slug }}</a></td>
+                            <td><a href="{%  url 'common:management_unit_detail' slug=object.slug %}">{{ object.slug }}</a></td>
                             <td>{{ object.lake.lake_name|default:"---"  }}</td>                                                     
                             <td>{{ object.label|default:"---"  }}</td>                         
                             <td>{{ object.get_mu_type_display|default:"---"  }}</td>
                             <td>{{ object.primary|default:"---"  }}</td>
                         </tr>                    
                     {% endfor %}                   
-                    <tbody>                    
+                </tbody>                    
             </table>
         {% else %}
-
             <div class="alert alert-primary" role="alert">
                 <div class="row justify-content-between mt-3">
                     <div class="col-8">
@@ -69,8 +64,7 @@
                     </div>
                 </div>                     
             </div>
-        {% endif  %}
-        
+        {% endif  %}        
     </div>
 
 {% endblock %}
@@ -80,10 +74,14 @@
 {% block scripts  %}
 
     <!-- tablesorter plugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.30.6/js/jquery.tablesorter.js" integrity="sha256-/zMRoPUv1Wfxf3urIyUFn8m1Ot0QmGwXAFHshnwubaE=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.30.6/js/jquery.tablesorter.js"
+            integrity="sha256-/zMRoPUv1Wfxf3urIyUFn8m1Ot0QmGwXAFHshnwubaE="
+            crossorigin="anonymous"></script>
 
     <!-- tablesorter widget file - loaded after the plugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.30.6/js/jquery.tablesorter.widgets.js" integrity="sha256-UIl6E2cmeTSpfPbrMkitLrbyAYUqlOz+zwC+Dc7bglI=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.30.6/js/jquery.tablesorter.widgets.js"
+            integrity="sha256-UIl6E2cmeTSpfPbrMkitLrbyAYUqlOz+zwC+Dc7bglI="
+            crossorigin="anonymous"></script>
 
     <script type="text/javascript">
 
