--- a/common/templates/common/common_base.html
+++ b/common/templates/common/common_base.html
@@ -40,6 +40,7 @@
                                     <li><a class="dropdown-item" href="{% url 'common:grid5_list' %}">5-Minute Grids</a></li>
                                     <li><a class="dropdown-item" href="{% url 'common:management_unit_list' %}">Management Units</a></li>
                                     <li><a class="dropdown-item" href="{% url 'common:species_list' %}">Species</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'common:taxon_list' %}">Taxon List</a></li>
                                 </ul>
                             </li>
                             
