Added integration tests for taxon list
This commit adds integration tests for the taxon list to verify that
the expected elements render on the page. Tests include the template,
filtered results, and not results found. All previously passing tests
continue to pass.

--- a/common/templates/common/taxon_list.html
+++ b/common/templates/common/taxon_list.html
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        {% if search %}
+        {% if search and object_list.count %}
             <div class="row justify-content-between mt-3">
                 <div class="col-8">
                     <p>{{object_list.count}} taxon found below node {{search}} "<em>{{taxon.taxon_label}}</em>".</p>     
