Fixed issues with grid5 detail template and lake view
this commit updates the lake view context queryset to appropriately
select primary and management unit type label from related tables.
this commit also fixes a type in the grid5 detail template that was
preventing it from rendering correctly.

--- a/common/templates/common/grid5_detail.html
+++ b/common/templates/common/grid5_detail.html
@@ -19,7 +19,7 @@
                     <div class="col-4">
                         <h5>Grid {{ object }} is associated with these management units: </h5>
 
-                        {% if %}
+                        {% if mus %}
 
                             <ul>
                                 {%  for mu in mus %}
