Removed order clause from taxon_node_filter, ManUnit short_name
This commit updates the custom taxon node filter to remove the
order_by clause which was causing errors in external packages.
Removing the clause does not effect how it works. this commit also
include a new method on Management Unit Object - "short_name" that
includes the management unit type abbreviation, a colon, and the
management unit label.  Used extensively in the templates to display
management units in a complete, but concise manner.  The detail pages
were also given a default geometry (all lakes bounding box) just
in case the lake geometry was not available. all previously passing
tests continue to pass.

--- a/common/templates/common/grid5_detail.html
+++ b/common/templates/common/grid5_detail.html
@@ -24,7 +24,7 @@
                             <ul>
                                 {%  for mu in mus %}
                                     <li>
-                                        <a href="{%  url 'common:management_unit_detail' slug=mu.slug %}"> {{ mu.get_mu_type_display }} {{ mu.label }} </a>
+                                        <a href="{%  url 'common:management_unit_detail' slug=mu.slug %}"> {{ mu.short_name }} </a>
                                     </li>
                                 {% endfor %}                
                             </ul>                        
@@ -59,8 +59,6 @@
 
      $(document).ready(function(){
 
-         let bbox = {{ object.lake.envelope_ontario.json|safe }};
-         
          function leafletBounds(bbox){
              let pt1 = bbox.coordinates[0][0]
              let pt2 = bbox.coordinates[0][2]
@@ -69,6 +67,13 @@
                  [pt2[1], pt2[0]],                         
              ]
          }
+
+         
+         {% if object.lake.envelope_ontario  %}
+         const bbox = {{ object.lake.envelope_ontario.json|safe }};
+         {% else %}
+         const bbox = '{"type":"Polygon","coordinates":[[[-92.094,41.381],[-92.094,49.016],[-76.059,49.016],[-76.059,41.381],[-92.094,41.381]]]}';
+         {%  endif %}
          
          let my_map = new L.map('main_map', {
              zoomSnap: 0.1
